--- a/dx11frame/dx11frame/dx11frame.vcxproj
+++ b/dx11frame/dx11frame/dx11frame.vcxproj
@@ -79,12 +79,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CAppBase.cpp" />
+    <ClCompile Include="CWin32.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CAppBase.h" />
     <ClInclude Include="common.h" />
-    <ClInclude Include="main.h" />
+    <ClInclude Include="CWin32.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
