--- a/dx11frame/dx11frame/dx11frame.vcxproj.filters
+++ b/dx11frame/dx11frame/dx11frame.vcxproj.filters
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="main.h" />
     <ClInclude Include="CAppBase.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="CWin32.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="CAppBase.cpp" />
+    <ClCompile Include="CWin32.cpp" />
   </ItemGroup>
 </Project>
