--- a/dx11frame/TestGame/TestGame.vcxproj
+++ b/dx11frame/TestGame/TestGame.vcxproj
@@ -41,11 +41,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\dx11frame;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\dx11frame;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
