Added class CDirectX. Now have a windows and backbuffer, which is being cleared. Still have hard coded values and error handling to improve.

--- a/dx11frame/dx11frame/dx11frame.vcxproj
+++ b/dx11frame/dx11frame/dx11frame.vcxproj
@@ -79,11 +79,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Classes\CAppBase.cpp" />
+    <ClCompile Include="Classes\CDirectX.cpp" />
     <ClCompile Include="Classes\CWin32.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\CAppBase.h" />
+    <ClInclude Include="Classes\CDirectX.h" />
     <ClInclude Include="Classes\CWin32.h" />
     <ClInclude Include="common.h" />
   </ItemGroup>
