Added class CInput files, but no logic yet. Added a few #pragma regions to organize things.

--- a/dx11frame/dx11frame/dx11frame.vcxproj.filters
+++ b/dx11frame/dx11frame/dx11frame.vcxproj.filters
@@ -11,6 +11,9 @@
     <ClInclude Include="Classes\CDirectX.h">
       <Filter>Classes</Filter>
     </ClInclude>
+    <ClInclude Include="Classes\CInput.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -21,6 +24,9 @@
       <Filter>Classes</Filter>
     </ClCompile>
     <ClCompile Include="Classes\CDirectX.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\CInput.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
   </ItemGroup>
