--- a/dx11frame/dx11frame/dx11frame.vcxproj
+++ b/dx11frame/dx11frame/dx11frame.vcxproj
@@ -40,12 +40,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;..\TestGame;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;..\TestGame;$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;..\TestGame;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;..\TestGame;$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -80,12 +80,14 @@
   <ItemGroup>
     <ClCompile Include="Classes\CAppBase.cpp" />
     <ClCompile Include="Classes\CDirectX.cpp" />
+    <ClCompile Include="Classes\CInput.cpp" />
     <ClCompile Include="Classes\CWin32.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\CAppBase.h" />
     <ClInclude Include="Classes\CDirectX.h" />
+    <ClInclude Include="Classes\CInput.h" />
     <ClInclude Include="Classes\CWin32.h" />
     <ClInclude Include="common.h" />
   </ItemGroup>
