Added TestEntity for trying the new interfaces. Future goal is for CAppBase to host reference collections for IInitializable, IUpdateable, IRenderable, and ICleanupable so it can manage those callbacks. IEntity include was removed from CAppBase to break up include loop. Classes extending IEntity will need to include IEntity.h themselves.

--- a/dx11frame/TestGame/TestGame.vcxproj
+++ b/dx11frame/TestGame/TestGame.vcxproj
@@ -84,9 +84,11 @@
   <ItemGroup>
     <ClCompile Include="CApp.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TestEntity.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CApp.h" />
+    <ClInclude Include="TestEntity.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dx11frame\dx11frame.vcxproj">
