--- a/dx11frame/TestGame/TestGame.vcxproj.filters
+++ b/dx11frame/TestGame/TestGame.vcxproj.filters
@@ -3,8 +3,10 @@
   <ItemGroup>
     <ClCompile Include="CApp.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TestEntity.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CApp.h" />
+    <ClInclude Include="TestEntity.h" />
   </ItemGroup>
 </Project>
