--- a/dx11frame/dx11frame/dx11frame.vcxproj
+++ b/dx11frame/dx11frame/dx11frame.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="Classes\CWin32.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Classes\CTimer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\CAppBase.h">
@@ -104,6 +105,7 @@
     <ClInclude Include="Classes\CWin32.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="Classes\CTimer.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="Interfaces\ICleanupable.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
