--- a/dx11frame/dx11frame/dx11frame.vcxproj.filters
+++ b/dx11frame/dx11frame/dx11frame.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="Interfaces\ICleanupable.h">
       <Filter>Interfaces</Filter>
     </ClInclude>
+    <ClInclude Include="Classes\CTimer.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Classes\CAppBase.cpp">
@@ -41,6 +44,9 @@
       <Filter>Classes</Filter>
     </ClCompile>
     <ClCompile Include="Classes\CInput.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\CTimer.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
   </ItemGroup>
