Fixed post-build event for copying asset directory to target directory. Always put double-quotes around paths just in case the path in a VS macro changes to one with spaces. AAARGGGGHHH! Minor changes to TestEntity.cpp.

--- a/dx11frame/TestGame/TestGame.vcxproj
+++ b/dx11frame/TestGame/TestGame.vcxproj
@@ -63,7 +63,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /s /d /i $(ProjectDir)Assets $(TargetDir)Assets</Command>
+      <Command>xcopy /y /s /d /i "$(ProjectDir)Assets" "$(TargetDir)Assets"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -84,7 +84,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /s /d /i $(ProjectDir)Assets $(TargetDir)Assets</Command>
+      <Command>xcopy /y /s /d /i "$(ProjectDir)Assets" "$(TargetDir)Assets"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
