--- a/dx11frame/TestGame/TestGame.vcxproj
+++ b/dx11frame/TestGame/TestGame.vcxproj
@@ -91,10 +91,12 @@
     <ClCompile Include="CApp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TestEntity.cpp" />
+    <ClCompile Include="TestEntity2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CApp.h" />
     <ClInclude Include="TestEntity.h" />
+    <ClInclude Include="TestEntity2.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dx11frame\dx11frame.vcxproj">
