--- a/dx11frame/TestGame/TestGame.vcxproj.filters
+++ b/dx11frame/TestGame/TestGame.vcxproj.filters
@@ -4,9 +4,11 @@
     <ClCompile Include="CApp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TestEntity.cpp" />
+    <ClCompile Include="TestEntity2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CApp.h" />
     <ClInclude Include="TestEntity.h" />
+    <ClInclude Include="TestEntity2.h" />
   </ItemGroup>
 </Project>
