--- a/dx11frame/dx11frame/dx11frame.vcxproj.filters
+++ b/dx11frame/dx11frame/dx11frame.vcxproj.filters
@@ -2,9 +2,6 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="common.h" />
-    <ClInclude Include="Classes\CAppBase.h">
-      <Filter>Classes</Filter>
-    </ClInclude>
     <ClInclude Include="Classes\CWin32.h">
       <Filter>Classes</Filter>
     </ClInclude>
@@ -32,11 +29,11 @@
     <ClInclude Include="Classes\CTimer.h">
       <Filter>Classes</Filter>
     </ClInclude>
+    <ClInclude Include="Classes\CDX11Frame.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Classes\CAppBase.cpp">
-      <Filter>Classes</Filter>
-    </ClCompile>
     <ClCompile Include="Classes\CWin32.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
@@ -47,6 +44,9 @@
       <Filter>Classes</Filter>
     </ClCompile>
     <ClCompile Include="Classes\CTimer.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\CDX11Frame.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
   </ItemGroup>
