--- a/dx11frame/TestGame/TestGame.vcxproj.filters
+++ b/dx11frame/TestGame/TestGame.vcxproj.filters
@@ -3,12 +3,12 @@
   <ItemGroup>
     <ClCompile Include="CApp.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="TestEntity.cpp" />
-    <ClCompile Include="TestEntity2.cpp" />
+    <ClCompile Include="DebugText.cpp" />
+    <ClCompile Include="Hypotrochoid.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CApp.h" />
-    <ClInclude Include="TestEntity.h" />
-    <ClInclude Include="TestEntity2.h" />
+    <ClInclude Include="DebugText.h" />
+    <ClInclude Include="Hypotrochoid.h" />
   </ItemGroup>
 </Project>
