Renamed Hypotrochoid to Cycloid (both class and file). Future plans are to generate other cycloids than only Hypotrochoids within this class. Next should be an epitrochoid.

--- a/dx11frame/TestGame/TestGame.vcxproj.filters
+++ b/dx11frame/TestGame/TestGame.vcxproj.filters
@@ -4,11 +4,11 @@
     <ClCompile Include="CApp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="DebugText.cpp" />
-    <ClCompile Include="Hypotrochoid.cpp" />
+    <ClCompile Include="Cycloid.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CApp.h" />
     <ClInclude Include="DebugText.h" />
-    <ClInclude Include="Hypotrochoid.h" />
+    <ClInclude Include="Cycloid.h" />
   </ItemGroup>
 </Project>
