--- a/dx11frame/dx11frame/dx11frame.vcxproj
+++ b/dx11frame/dx11frame/dx11frame.vcxproj
@@ -19,13 +19,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -40,12 +40,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)\references\DirectXTK\inc;$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(SolutionDir)\dx11frame\Interfaces;$(SolutionDir)\TestGame;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\references\DirectXTK\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>V:\Projects\DirectXTK\Inc;$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(SolutionDir)\dx11frame\Interfaces;$(SolutionDir)\TestGame;$(IncludePath)</IncludePath>
+    <LibraryPath>V:\Projects\DirectXTK\Bin\Desktop_2019_Win10\Win32\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(SolutionDir)\references\DirectXTK\inc;$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(SolutionDir)\dx11frame\Interfaces;$(SolutionDir)\TestGame;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\references\DirectXTK\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>V:\Projects\DirectXTK\Inc;$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(SolutionDir)\dx11frame\Interfaces;$(SolutionDir)\TestGame;$(IncludePath)</IncludePath>
+    <LibraryPath>V:\Projects\DirectXTK\Bin\Desktop_2019_Win10\Win32\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
