--- a/dx11frame/dx11frame/dx11frame.vcxproj.filters
+++ b/dx11frame/dx11frame/dx11frame.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClInclude Include="Classes\CTimer.h">
       <Filter>Classes</Filter>
     </ClInclude>
-    <ClInclude Include="Classes\CDX11Frame.h">
+    <ClInclude Include="Classes\dx11_frame.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
@@ -46,7 +46,7 @@
     <ClCompile Include="Classes\CTimer.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
-    <ClCompile Include="Classes\CDX11Frame.cpp">
+    <ClCompile Include="Classes\dx11_frame.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
   </ItemGroup>
