--- a/dx11frame/dx11frame/dx11frame.vcxproj
+++ b/dx11frame/dx11frame/dx11frame.vcxproj
@@ -87,8 +87,8 @@
     <ClCompile Include="Classes\CWin32.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="Classes\CTimer.cpp" />
     <ClCompile Include="Classes\dx11_frame.cpp" />
+    <ClCompile Include="Classes\timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\directx.h">
@@ -100,8 +100,8 @@
     <ClInclude Include="Classes\CWin32.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="Classes\CTimer.h" />
     <ClInclude Include="Classes\dx11_frame.h" />
+    <ClInclude Include="Classes\timer.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="Interfaces\ICleanupable.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
