Updated references to DirectXTK version may2020 and built with Visual Studio 2019. Updated root level .gitignore. Updated README.md.

--- a/dx11frame/dx11frame/dx11frame.vcxproj
+++ b/dx11frame/dx11frame/dx11frame.vcxproj
@@ -40,12 +40,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>V:\Projects\DirectXTK\Inc;$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(SolutionDir)\dx11frame\Interfaces;$(SolutionDir)\TestGame;$(IncludePath)</IncludePath>
-    <LibraryPath>V:\Projects\DirectXTK\Bin\Desktop_2019_Win10\Win32\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)references\DirectXTK\inc;$(SolutionDir)dx11frame;$(SolutionDir)dx11frame\Classes;$(SolutionDir)dx11frame\Interfaces;$(SolutionDir)TestGame;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)references\DirectXTK\lib\debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>V:\Projects\DirectXTK\Inc;$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(SolutionDir)\dx11frame\Interfaces;$(SolutionDir)\TestGame;$(IncludePath)</IncludePath>
-    <LibraryPath>V:\Projects\DirectXTK\Bin\Desktop_2019_Win10\Win32\Release;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)references\DirectXTK\inc;$(SolutionDir)dx11frame;$(SolutionDir)dx11frame\Classes;$(SolutionDir)dx11frame\Interfaces;$(SolutionDir)TestGame;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)references\DirectXTK\lib\release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
