--- a/dx11frame/TestGame/TestGame.vcxproj
+++ b/dx11frame/TestGame/TestGame.vcxproj
@@ -41,13 +41,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>V:\Projects\DirectXTK\Inc;$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(SolutionDir)\dx11frame\Interfaces;$(IncludePath)</IncludePath>
-    <LibraryPath>V:\Projects\DirectXTK\Bin\Desktop_2019_Win10\Win32\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)references\DirectXTK\inc;$(SolutionDir)dx11frame;$(SolutionDir)dx11frame\Classes;$(SolutionDir)dx11frame\Interfaces;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)references\DirectXTK\lib\debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>V:\Projects\DirectXTK\Inc;$(SolutionDir)\dx11frame;$(SolutionDir)\dx11frame\Classes;$(SolutionDir)\dx11frame\Interfaces;$(IncludePath)</IncludePath>
-    <LibraryPath>V:\Projects\DirectXTK\Bin\Desktop_2019_Win10\Win32\Release;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)references\DirectXTK\inc;$(SolutionDir)dx11frame;$(SolutionDir)dx11frame\Classes;$(SolutionDir)dx11frame\Interfaces;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)references\DirectXTK\lib\release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
