--- a/dx11frame/dx11frame/dx11frame.vcxproj
+++ b/dx11frame/dx11frame/dx11frame.vcxproj
@@ -99,9 +99,6 @@
     <ClInclude Include="Classes\timer.h" />
     <ClInclude Include="Classes\win32.h" />
     <ClInclude Include="common.h" />
-    <ClInclude Include="Interfaces\IInitializable.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
-    </ClInclude>
     <ClInclude Include="Interfaces\IRenderable.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
@@ -110,6 +107,7 @@
     </ClInclude>
     <ClInclude Include="Interfaces\i_cleanupable.h" />
     <ClInclude Include="Interfaces\i_entity.h" />
+    <ClInclude Include="Interfaces\i_initializable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
