--- a/dx11frame/TestGame/TestGame.vcxproj.filters
+++ b/dx11frame/TestGame/TestGame.vcxproj.filters
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="CApp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="DebugText.cpp" />
     <ClCompile Include="Cycloid.cpp" />
+    <ClCompile Include="app.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CApp.h" />
     <ClInclude Include="DebugText.h" />
     <ClInclude Include="Cycloid.h" />
+    <ClInclude Include="app.h" />
   </ItemGroup>
 </Project>
