Refactored class Cycloid. Added class rng.

--- a/dx11frame/dx11frame/dx11frame.vcxproj.filters
+++ b/dx11frame/dx11frame/dx11frame.vcxproj.filters
@@ -32,6 +32,7 @@
     <ClInclude Include="Interfaces\i_updateable.h">
       <Filter>Interfaces</Filter>
     </ClInclude>
+    <ClInclude Include="rng.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Classes\directx.cpp">
