--- a/dx11frame/dx11frame/dx11frame.vcxproj
+++ b/dx11frame/dx11frame/dx11frame.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="Interfaces\i_initializable.h" />
     <ClInclude Include="Interfaces\i_renderable.h" />
     <ClInclude Include="Interfaces\i_updateable.h" />
+    <ClInclude Include="rng.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
